# paint-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lgtm.yml
src/: Main.cpp  Map.cpp  Map.h  Render.cpp  Render.h
